# esp-idf-ble

./: .gitignore  .gitpod.Dockerfile  .gitpod.yaml  Cargo.toml  Cargo.toml.bak  LICENSE-MIT  README.md  rust-toolchain.toml  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32c3
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish-dry-run.yml.disabled  publish.yml  security-audit.yml
esp-ble/: Cargo.toml
esp-ble-example/: Cargo.toml  rust-toolchain.toml  sdkconfig
esp-ble-example/docs/: README.md
esp-ble-example/scripts/: flash.sh  run-wokwi.sh
esp-ble-example/src/: main.rs
esp-ble/src/: advertise.rs  gap.rs  gatt.rs  gatt_server.rs  lib.rs
examples/: gatt_secure_server.rs  gatt_server.rs
src/: advertise.rs  ble.rs  bt_uuid.rs  gap.rs  gatt.rs  gatt_server.rs  lib.rs  security.rs  service.rs  service_uuid.rs
