[package]
name = "esp-idf-ble"
version = "0.0.1"
edition = "2021"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
resolver = "2"

[profile.release]
opt-level = "s"
incremental = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
incremental = true

[features]
native = ["esp-idf-sys/native"]
default = ["native", "experimental"]
experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-svc = "0.42"
esp-idf-hal = "0.38"
embedded-svc = "0.21"
embedded-hal = "0.2"

log = { version = "0.4" }

[build-dependencies]
embuild = "0.30"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
